samples/_failures_safe/1761726832_ee145b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7f15eb0a.c: In function ‘main’:
./samples/SAFE/__tmp_7f15eb0a.c:141:9: error: expected expression at end of input
  141 |         line[strcspn(line,
      |         ^~~~
./samples/SAFE/__tmp_7f15eb0a.c:141:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7f15eb0a.c:141:9: error: expected declaration or statement at end of input
